# workspace/02.ofb.atoms.security/sboot-orch-ofb-authorization-server/src/main/java/com/ofb/authorization/service/AccessTokenValidationService.java
@@ -63,7 +63,7 @@ public class AccessTokenValidationService {
             consentId = jwtDecoder.decode(accessToken.replace("Bearer ", "")).getClaim("ofb.consent.id").toString();
         } catch (Exception e) {
             listResponseErrors.add(new ResponseErrorsInnerTemplate().toBuilder()
-                    .title("Authorization inválid (in getClaim AccessToken")
+                    .title("Authorization invalid (in getClaim AccessToken")
                     .code(ResponseOFBCodesEnum.CodeEnum.INVALID_AUTHORIZATIONS.getValue())
                     .detail("An error occurred in consentId verify.")
                     .build());
@@ -76,7 +76,7 @@ public class AccessTokenValidationService {
             clientDocument = jwtDecoder.decode(accessToken.replace("Bearer ", "")).getClaim("client.document").toString();
         } catch (Exception e) {
             listResponseErrors.add(new ResponseErrorsInnerTemplate().toBuilder()
-                    .title("Authorization inválid (in getClaim AccessToken")
+                    .title("Authorization invalid (in getClaim AccessToken")
                     .code(ResponseOFBCodesEnum.CodeEnum.INVALID_AUTHORIZATIONS.getValue())
                     .detail("An error occurred in clientDocument (document of Participant) verify.")
                     .build());
@@ -89,7 +89,7 @@ public class AccessTokenValidationService {
             customerDocument = jwtDecoder.decode(accessToken.replace("Bearer ", "")).getClaim("customer.document").toString();
         } catch (Exception e) {
             listResponseErrors.add(new ResponseErrorsInnerTemplate().toBuilder()
-                    .title("Authorization inválid (in getClaim AccessToken")
+                    .title("Authorization invalid (in getClaim AccessToken")
                     .code(ResponseOFBCodesEnum.CodeEnum.INVALID_AUTHORIZATIONS.getValue())
                     .detail("An error occurred in customerDocument (document of LoggedUser) verify.")
                     .build());
@@ -102,7 +102,7 @@ public class AccessTokenValidationService {
             scope = jwtDecoder.decode(accessToken.replace("Bearer ", "")).getClaim("permissions").toString();
             if (!scope.contains("RESOURCES_READ") || !scope.contains("CUSTOMERS_PERSONAL_IDENTIFICATIONS_READ")) {
                 listResponseErrors.add(new ResponseErrorsInnerTemplate().toBuilder()
-                        .title("Authorization inválid (in getClaim AccessToken")
+                        .title("Authorization invalid (in getClaim AccessToken")
                         .code(ResponseOFBCodesEnum.CodeEnum.INVALID_AUTHORIZATIONS.getValue())
                         .detail("Authorization not exists a consent permissions RESOURCES_READ and CUSTOMERS_PERSONAL_IDENTIFICATIONS_READ " +
                                 "of LoggedUser verify.")
@@ -110,7 +110,7 @@ public class AccessTokenValidationService {
             }
         } catch (Exception e) {
             listResponseErrors.add(new ResponseErrorsInnerTemplate().toBuilder()
-                    .title("Authorization inválid (in getClaim AccessToken")
+                    .title("Authorization invalid (in getClaim AccessToken")
                     .code(ResponseOFBCodesEnum.CodeEnum.INVALID_AUTHORIZATIONS.getValue())
                     .detail("An error occurred in scope (consent permissions) of LoggedUser verify.")
                     .build());
@@ -123,14 +123,14 @@ public class AccessTokenValidationService {
             expiration = jwtDecoder.decode(accessToken.replace("Bearer ", "")).getClaim("exp").toString();
             if (!OffsetDateTime.parse(expiration).isAfter(OffsetDateTime.now(ZoneId.of("UTC")))) {
                 listResponseErrors.add(new ResponseErrorsInnerTemplate().toBuilder()
-                        .title("Authorization inválid (in getClaim AccessToken)")
+                        .title("Authorization invalid (in getClaim AccessToken)")
                         .code(ResponseOFBCodesEnum.CodeEnum.INVALID_AUTHORIZATIONS.getValue())
                         .detail("The consent ExpirationDateTime is invalid.")
                         .build());
             }
         } catch (Exception e) {
             listResponseErrors.add(new ResponseErrorsInnerTemplate().toBuilder()
-                    .title("Authorization inválid (in getClaim AccessToken")
+                    .title("Authorization invalid (in getClaim AccessToken")
                     .code(ResponseOFBCodesEnum.CodeEnum.INVALID_AUTHORIZATIONS.getValue())
                     .detail("An error occurred in consent Expiration DateTime verify.")
                     .build());
