# workspace/02.ofb.atoms.security/sboot-orch-ofb-authorization-server/src/main/resources/openapi/server/openapi-authorization-server.1.0.0.yaml
@@ -22,6 +22,20 @@ paths:
           $ref: '#/components/responses/ResponseValidate'
         '400':
           $ref: '#/components/responses/BadRequest'
+  /authorization/businessEntityValidate:
+    get:
+      tags:
+        - AuthorizationValidate
+      summary: 'summary'
+      operationId: businessEntityValidate
+      description: 'description'
+      parameters:
+        - $ref: '#/components/parameters/Authorization'
+      responses:
+        '200':
+          $ref: '#/components/responses/ResponseValidate'
+        '400':
+          $ref: '#/components/responses/BadRequest'
 components:
   schemas:
     ResponseAuthorizationValidate:
